<resources>
    <string name="app_name">Clean House</string>
    <string name="description">Clean House is pest control service provider based in Muthithi Road, Westlands, Nairobi. We specialize in advanced pest control procedures. We aim to include both  technological approaches and medical approaches in implementing our pest control procedures.
In contrast to other pest control service providers we do highly engaging survey and research before developing our main procedure in pest control measures. In addition we also offer home cleaning services. Thus you can be rest assured that our methods have been tested and seen to be highly effective in handling and controlling  pest .
        Our core values are undoubtedly honesty and integrity which help us in providing high quality services to our beloved customers.
</string>
    <string name="occupantNAme">Full names ...</string>
    <string name="gender"> Gender ...</string>
    <string name="houseNumber">House no ... </string>
    <string name="phone">Phone number ... </string>
    <string name="Email">Email ...</string>
    <string name="pest">Pest to control (cockroaches ,  rats, pet pest )</string>
    <string name="date">Date of  visit (monday - friday)</string>
    <string-array name="serviceDescriptions">

        <item>We are all aware of the effects of mosquitoes in our homes. To avoid the adverse effects of mosquito infestation, our team accesses the environment and ensures that they destroy all mosquito breeding areas. Acebug fumigation company offers 100% pests control services that guarantee our clients of their safety. We also ensure we offer consultation services that will help you be in control of your environment even after we have offered fumigation services.</item>
        <item >Do you shiver at the sight of a creeping cockroach in your living room, or the site of those big roaches that jump from one cabinet to another in your clean kitchen? Well this should not be a problem because cockroaches control is our main forte. Acebug fumigation company has a lasting solution for cockroach eradication in your house. We help solve the problem in many homes and put an end to buying of cockroach powders and chalks that offer short span cockroach eradication. We ensure that our well trained team access the situation and thus ensure that we can guarantee the problem is solved by using the best methods to deal with cockroach infestation in your home through fumigation services in Nairobi and other parts of Kenya.</item>
        <item>Are you tired of the itching bites and discomfort caused by bed bugs? Bed bugs can cause extreme turmoil in a habitation and its inhabitants. Did you know we can eliminate bed bugs in one single visit? Acebug Fumigation services can help you get rid of bedbugs in your home, and make it safe for you and your family. Our team of experts will access your place before performing the bed bug control fumigation. We ensure safety precautions are taken and use approved pest control chemicals that are safe for the human environment. We ensure that this bedbug problem is solved in a day for our clients convenience.</item>
        <item>Termites infestation is a main problem for many homes , businesses and property owners. Termites can literally eat through your home. However, if early termite control eradication is done on time, the effects are less daunting. The intervention of a professional pest control company like Acebug fumigation company can help in solving this problem. Our team of experts who are well trained access the damage and the areas in your home that have been infested by the termites, like behind surfaces and walls, they check on the nearby trees, near closed windows and doors and such areas. We ensure that we use eco friendly termites eradication products that ensure that your home is safe from termites infestation.</item>
        <item>Flying insects like bats, bees, flies and moths can be such a nuisance in our homes. If the breeding of flying insects is not controlled they multiply fast and thus make it harder for eradication. Our fumigation services team swiftly solves this issue anywhere in Nairobi and in the country. We come in equipped to deal with the infestation of flying insect and ensure that we leave your home free from insects. We guarantee the best fumigation and pest control services and consultation in Nairobi and its environs.</item>

    </string-array>
    <string name="cockroach" >Do you shiver at the sight of a creeping cockroach in your living room, or the site of those big roaches that jump from one cabinet to another in your clean kitchen? Well this should not be a problem because cockroaches control is our main forte. Acebug fumigation company has a lasting solution for cockroach eradication in your house. We help solve the problem in many homes and put an end to buying of cockroach powders and chalks that offer short span cockroach eradication. We ensure that our well trained team access the situation and thus ensure that we can guarantee the problem is solved by using the best methods to deal with cockroach infestation in your home through fumigation services in Nairobi and other parts of Kenya.</string>
</resources>