<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Form">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:text="Fill in the form below"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textColor="@color/black"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:inputType="text"
            android:id="@+id/inputOccupantNAme"
            android:textSize="20dp"
            android:hint="@string/occupantNAme"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:inputType="text"
            android:id="@+id/gender"
            android:textSize="20dp"
            android:hint="@string/gender"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:inputType="number"
            android:id="@+id/phone"
            android:textSize="20dp"
            android:hint="@string/phone"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:inputType="textEmailAddress"
            android:id="@+id/email"
            android:textSize="20dp"
            android:hint="@string/Email"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:inputType="number"
            android:id="@+id/houseNumber"
            android:textSize="20dp"
            android:hint="@string/houseNumber"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:inputType="text"
            android:id="@+id/pest"
            android:textSize="20dp"
            android:hint="@string/pest"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:inputType="datetime"
            android:id="@+id/dateOfVisit"
            android:textSize="20dp"
            android:hint="@string/date"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:elevation="10dp"
            android:text="Submit"
            android:textSize="27dp"
            android:id="@+id/buttonSubmit"
            android:paddingEnd="10dp"
            android:paddingRight="10dp" />
    </LinearLayout>
</RelativeLayout>